Astro con disenos

--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -1,29 +1,41 @@
----
-
----
-
 <div>
-  <nav class="p-10">
-    <ul class="flex flex-row space-x-8 justify-center text-2xl">
-      <li
-        class="transition-transform duration-200 ease-in-out transform hover:scale-105"
-      >
-        <a href="#" class="text-grey hover:text-orange font-medium">About</a>
+  <nav class="p-4 md:p-10 bg-misty-blue">
+    <ul
+      class="flex flex-row items-center justify-center space-x-4 md:space-x-8 text-lg md:text-2xl"
+    >
+      <li>
+        <a href="/">
+          <img
+            class="h-12 w-12 md:h-20 md:w-20"
+            src="../../public/assets/logo-dc.jpg"
+            alt="img"
+          />
+        </a>
       </li>
       <li
         class="transition-transform duration-200 ease-in-out transform hover:scale-105"
       >
-        <a href="#" class="text-grey hover:text-orange">Services</a>
+        <a href="/about" class="text-ebony hover:text-red-orange font-medium"
+          >About</a
+        >
       </li>
       <li
         class="transition-transform duration-200 ease-in-out transform hover:scale-105"
       >
-        <a href="#" class="text-grey hover:text-orange">Portfolio</a>
+        <a href="/services" class="text-ebony hover:text-red-orange">Services</a
+        >
       </li>
       <li
         class="transition-transform duration-200 ease-in-out transform hover:scale-105"
       >
-        <a href="#" class="text-grey hover:text-orange">Contact</a>
+        <a href="/portfolio" class="text-ebony hover:text-red-orange"
+          >Portfolio</a
+        >
+      </li>
+      <li
+        class="transition-transform duration-200 ease-in-out transform hover:scale-105"
+      >
+        <a href="/contact" class="text-ebony hover:text-red-orange">Contact</a>
       </li>
     </ul>
   </nav>
