--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,9 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-    --color-principal-color: #1A1A1A;
-    --color-second-color: #FF5733;
-    --color-grey: #d8e1e7;
-    --color-orange: #ff5d00;
-    --color-blue: #00478f;
+    --color-midnight-blue: #00478f;
+    --color-red-orange: #ff5d00;
+    --color-ebony: #1A1A1A;
+    --color-misty-blue: #d8e1e7;
 }
