update img path

--- a/src/pages/services.astro
+++ b/src/pages/services.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
         <div class="flex items-center mb-4">
           <img
             class="w-12 h-12 mr-4"
-            src="../../public/assets/6.png"
+            src="../../public/assets/img/6.png"
             alt="DEV Engineer"
           />
           <h2 class="text-2xl font-semibold text-ebony">DEV Engineer</h2>
@@ -36,7 +36,7 @@ import "../styles/global.css";
         <div class="flex items-center mb-4">
           <img
             class="w-12 h-12 mr-4"
-            src="../../public/assets/5.png"
+            src="../../public/assets/img/5.png"
             alt="QA Engineer"
           />
           <h2 class="text-2xl font-semibold text-ebony">QA Engineer</h2>
