--- a/src/components/Menu.astro
+++ b/src/components/Menu.astro
@@ -7,7 +7,7 @@
         <a href="/">
           <img
             class="h-12 w-12 md:h-20 md:w-20"
-            src="../../public/assets/logo-dc.jpg"
+            src="../../public/assets/img/logo-dc.jpg"
             alt="img"
           />
         </a>
