--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,25 +1,54 @@
 ---
 import Layout from "../layouts/Layout.astro";
+
 import "../styles/global.css";
 ---
 
 <Layout>
   <div class="container mx-auto p-4">
-    <h1 class="text-3xl font-bold text-ebony mb-4">About</h1>
+    <h1 class="text-3xl font-bold text-ebony mb-4">About Me</h1>
     <p class="text-lg text-ebony leading-relaxed mb-8">
-      Asperiores perferendis est totam molestias earum. Et soluta consequuntur
-      aut est et delectus at. Quasi recusandae molestiae perferendis qui tenetur
-      ut. Temporibus velit vitae voluptates quia voluptas ea aut. Neque
-      recusandae natus autem consequatur est natus ea voluptatem. Officiis
-      commodi quia autem illo officiis quo harum. Sed velit maxime perferendis.
-      Fugiat rerum qui aut qui placeat. Quibusdam totam voluptatibus cum dolorem
-      voluptatem ex. Quia vero tenetur molestiae autem quisquam porro sit. Sequi
-      sint quasi minus ullam libero. Ut possimus perferendis esse dolores omnis.
-      Numquam ducimus sed quidem reprehenderit. Et deserunt qui at repellendus.
-      Officiis inventore ut suscipit ab sed. Rem nobis ea et ratione quos. Eius
-      omnis quo sit eaque non quia et. Error quasi animi sequi similique fugiat.
-      Dolorem qui et cum quo dicta quibusdam delectus.
+      About Me With over 10 years of experience in the IT field, I specialize in
+      both manual and automated testing, ensuring software quality across
+      various platforms and applications. I am methodical, analytical, and
+      results-driven, with a proven ability to quickly identify and resolve
+      issues. My focus is on delivering high-quality products that meet the
+      highest standards, optimizing processes, and enhancing user experience.
     </p>
+    <div class="text-lg text-ebony leading-relaxed mb-8">
+      <h1 class="text-2xl font-semibold text-ebony mb-4">
+        Education and Certifications
+      </h1>
+      <p>
+        Software Development Engineer – Universidad Nacional Abierta y a
+        Distancia (UNAD)
+      </p>
+      <p>ISTQB-CTFL-AT Agile Tester</p>
+      <p>Advanced Test Automation Engineer</p>
+      <p>Scrum Master</p>
+      <p>Developer RPA with UiPath</p>
+      <p>EF SET Certificate English B2</p>
+      <h1 class="text-2xl font-semibold text-ebony mb-4 mt-8">
+        Why Work With Me?
+      </h1>
+      <p>
+        <strong>Proven Experience:</strong> Over a decade in QA, working on international
+        projects and with multicultural teams.
+      </p>
+      <p>
+        <strong>Quality Focus:</strong> Committed to delivering high-quality products,
+        ensuring client satisfaction and software stability.
+      </p>
+      <p>
+        <strong>Efficient Automation:</strong> Expertise in creating and maintaining
+        automation scripts that optimize testing processes.
+      </p>
+      <p>
+        <strong>Clear Communication:</strong> Ability to present test results clearly
+        and concisely, facilitating decision-making.
+      </p>
+    </div>
+
     <h2 class="text-2xl font-semibold text-ebony mb-4">Skills</h2>
     <div class="flex flex-wrap gap-4">
       <a
