--- a/src/components/ContactButton.astro
+++ b/src/components/ContactButton.astro
@@ -1,5 +1,7 @@
-<button
-  class="transition-transform duration-200 ease-in-out transform hover:scale-105 bg-second-color text-grey py-2 px-4 mt-5 w-80 h-10 border-2 border-second-color rounded hover:bg-grey hover:text-second-color hover:border-grey cursor-pointer"
+<a href="/contact"
+  ><button
+    class="bg-red-orange text-white px-8 py-4 rounded-lg text-lg font-semibold hover:bg-orange-600 transition duration-300 cursor-pointer"
+  >
+    Contact!
+  </button></a
 >
-  Contact Me
-</button>
