--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -9,22 +9,33 @@ import "../styles/global.css";
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="bg-white rounded-lg shadow-md p-6">
         <img
-          src="https://source.unsplash.com/random/400x200"
+          src="../../public/assets/img/PortfolioDC-web.png"
           alt="Portfolio DC"
           class="mb-4 rounded-md w-full h-48 object-cover"
         />
         <h2 class="text-2xl font-semibold text-ebony mb-2">Portfolio DC</h2>
         <p class="text-ebony text-sm mb-4">
-          Comentario relacionado con el desarrollo de Portfolio DC. Este
-          proyecto fue desarrollado utilizando Astro, HTML, CSS y JavaScript.
+          I created this portfolio to showcase my dual expertise in Quality
+          Assurance (QA) and Software Development. With over 10 years of
+          experience, I aim to demonstrate my ability to ensure software quality
+          while also contributing to the development process. This portfolio
+          highlights my skills in test automation, manual testing, frontend and
+          backend development, and process automation. It serves as a gateway
+          for potential clients and employers to understand how I can add value
+          to their projects by delivering high-quality, efficient, and scalable
+          solutions
         </p>
         <div class="flex items-center justify-between">
-          <a href="#" class="text-red-orange hover:underline">GitHub</a>
+          <a
+            href="https://github.com/dchacon130/PortfolioDC"
+            class="text-red-orange hover:underline"
+            target="_blank">GitHub</a
+          >
           <span class="text-gray-500 text-xs">Astro, HTML, CSS, JavaScript</span
           >
         </div>
       </div>
-      <div class="bg-white rounded-lg shadow-md p-6">
+      <div class="bg-white rounded-lg shadow-md p-6 hidden">
         <img
           src="https://source.unsplash.com/random/401x201"
           alt="Portfolio2 DC"
@@ -41,7 +52,7 @@ import "../styles/global.css";
           >
         </div>
       </div>
-      <div class="bg-white rounded-lg shadow-md p-6">
+      <div class="bg-white rounded-lg shadow-md p-6 hidden">
         <img
           src="https://source.unsplash.com/random/402x202"
           alt="Portfolio3 DC"
@@ -57,6 +68,108 @@ import "../styles/global.css";
           <span class="text-gray-500 text-xs">Astro, HTML, CSS, JavaScript</span
           >
         </div>
+      </div>
+    </div>
+    <div class="container mx-auto p-4 mt-10">
+      <h1 class="text-2xl font-semibold text-ebony mb-10">Experience</h1>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">919it LLC</h1>
+        <p class="text-2xl font-semibold">
+          Freelance Software Engineer | QA Automation Specialist
+        </p>
+        <p class="font-normal">May de 2016 - Present (8 años 11 meses)</p>
+        <p class="font-extralight text-gray-400">
+          Bogotá, Capital District, Colombia
+        </p>
+        <p>
+          As a Freelance Software Engineer and QA Automation Specialist, I have
+          collaborated with diverse clients to deliver high-quality software
+          solutions and robust testing frameworks. My expertise spans both
+          development and quality assurance, ensuring seamless functionality and
+          performance across applications
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">Venon Solutions</h1>
+        <p class="text-2xl font-semibold">QA Test Engineer</p>
+        <p class="font-normal">
+          August de 2022 - August de 2024 (2 años 1 mes)
+        </p>
+        <p class="font-extralight text-gray-400">
+          Provincia de Buenos Aires, Argentina
+        </p>
+        <p>
+          Specialized in testing web applications for the financial sector,
+          ensuring data accuracy, security, and user-friendly interfaces for
+          both administrative and client-facing platforms.
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">CTI Consulting</h1>
+        <p class="text-2xl font-semibold">Sr Quality/Automation Engineer</p>
+        <p class="font-normal">January de 2021 - December de 2022 (2 años)</p>
+        <p class="font-extralight text-gray-400">
+          Miami, Florida, Estados Unidos
+        </p>
+        <p>
+          Focused on eCommerce platforms, optimizing order fulfillment processes
+          through automated testing and quality assurance.
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">Speeron</h1>
+        <p class="text-2xl font-semibold">
+          Sr Quality/Automation Engineer leader
+        </p>
+        <p class="font-normal">March de 2018 - March de 2022 (4 años 1 mes)</p>
+        <p class="font-extralight text-gray-400">Stockholm, Sweden</p>
+        <p>
+          Specialized in software testing for the hospitality industry,
+          including Point of Sale (POS) systems, payment gateways, and room
+          scheduling applications.
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">Intergrupo (Software One)</h1>
+        <p class="text-2xl font-semibold">Sr Quality Engineer</p>
+        <p class="font-normal">January de 2015 - December de 2018 (4 años)</p>
+        <p class="font-extralight text-gray-400">Bogotá D.C., Colombia</p>
+        <p>
+          Worked across healthcare, telecommunications, and finance sectors,
+          ensuring quality in complex systems like medical appointment
+          applications and data warehouses.
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">Q-Vision</h1>
+        <p class="text-2xl font-semibold">Test Analyst Intermediate</p>
+        <p class="font-normal">January de 2014 - December de 2015 (2 años)</p>
+        <p class="font-extralight text-gray-400">Bogotá D.C., Colombia</p>
+        <p>
+          Focused on eCommerce platforms, ensuring seamless functionality for
+          product search, shopping cart management, and payment gateways.
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">BolColombia</h1>
+        <p class="text-2xl font-semibold">Software developer .Net - PHP</p>
+        <p class="font-normal">January de 2012 - December de 2014 (3 años)</p>
+        <p class="font-extralight text-gray-400">Bogotá D.C., Colombia</p>
+        <p>
+          Developed web and mobile applications for door-to-door sales
+          operations, integrating real-time data collection and order
+          processing.
+        </p>
+      </div>
+      <div class="text-lg text-ebony leading-relaxed mb-10">
+        <h1 class="text-2xl font-semibold">Data Tools S.A</h1>
+        <p class="text-2xl font-semibold">Test Analyst junior</p>
+        <p class="font-normal">January de 2010 - December de 2012 (3 años)</p>
+        <p class="font-extralight text-gray-400">Bogotá D.C., Colombia</p>
+        <p>
+          Focused on manual testing for transportation and traffic violation
+          management systems.
+        </p>
       </div>
     </div>
   </div>
