--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -11,7 +11,7 @@ import "../styles/global.css";
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="bg-white rounded-lg shadow-md p-6">
         <img
-          src="../../public/assets/img/PortfolioDC-web.png"
+          src="../assets/image/PortfolioDC-web.png"
           alt="Portfolio DC"
           class="mb-4 rounded-md w-full h-48 object-cover"
         />
