--- a/src/pages/portfolio.astro
+++ b/src/pages/portfolio.astro
@@ -11,9 +11,9 @@ import "../styles/global.css";
     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
       <div class="bg-white rounded-lg shadow-md p-6">
         <img
-          src="../assets/image/PortfolioDC-web.png"
+          src="../assets/image/PortfolioDC-web-background.png"
           alt="Portfolio DC"
-          class="mb-4 rounded-md w-full h-48 object-cover"
+          class="mb-4 rounded-md w-70 h-70 ml-14"
         />
         <h2 class="text-2xl font-semibold text-ebony mb-2">Portfolio DC</h2>
         <p class="text-ebony text-sm mb-4">
